--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "cra-template": "^1.1.2",
     "font-awesome": "^4.7.0",
+    "joi": "^17.4.0",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
